--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Lumbering -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Railroad stories'
+- GITenberg
 title: The White Desert
 url: http://www.gutenberg.org/ebooks/20155
